feat: enhance build configuration with static analysis tools and improve PDF metadata handling (#17)
* feat: enhance build configuration with static analysis tools and improve PDF metadata handling

* feat: add PMD ruleset for core quality checks in PDFium4j Java sources